--- a/about.html
+++ b/about.html
@@ -1,12 +1,22 @@
 ---
 layout: page
-title: About Me
-description: This is what I do.
+title: Sobre mí
+description: Conoce un poco más sobre @nerudista
 background: '/img/bg-about.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+<p><strong>En pocas palabras</strong></p>
+<p>Mi nombre es Pablo Quetzalc&oacute;atl V&aacute;zquez y soy un ferviente creyente del <em>poder de los datos</em>.</p>
+<p>Comenc&eacute; como desarrollador PL-SQL y llevo un rato haciendo an&aacute;lisis en diferentes herramientas de Analisis de Datos e Inteligencia de Negocios.</p>
+<p>La vida me llev&oacute; por el mundo de las telecomunicaciones, los bancos, la construcci&oacute;n de aviones y, ultimamente, en plataformas digitales.</p>
+<p>Te invito a conocer mi trabajo a trav&eacute;s de este blog.&nbsp;</p>
+<p></p>
+<p><strong>En no tan pocas</strong></p>
+<p>Nac&iacute; en un municipio del Estado de M&eacute;xico donde el gobierno no hab&iacute;a instalado agua potable, drenaje o banquetas. Mis padres ,un cocinero y una enfermera, se esforzaron en darme la mejor educaci&oacute;n que pudieron. De ellos, y mis abuelos, aprend&iacute; que la educaci&oacute;n es la mejor oportunidad para salir de la pobreza. Es gracias a este pasado que los temas de movilidad social, educaci&oacute;n y desigualdad son importantes para m&iacute;.</p>
+<p>Tuve la fortuna de terminar una carrera universitaria no sin grandes esfuerzos pero s&iacute; sin grandes calificaciones. Afortunadamente la vida me ense&ntilde;&oacute; que la nota m&aacute;s alta no siempre significa excelencia y que hay muchas m&aacute;s habilidades que hay que cultivar y desarrollar para lograr destacar.</p>
+<p>Soy fan&aacute;tico de los deportes as&iacute; que por ac&aacute; ver&aacute;n uno que otro art&iacute;culo sobre ellos. Sobre todo si se trata de confrontar alg&uacute;n sesgo cognitivo grupal.</p>
+<p>Como padre de dos ni&ntilde;as trabajo diariamente en crear un mundo mejor para ellas. Uno donde puedan ser libres de violencia, donde puedan ser quienes quieran ser y donde la brecha salarial entre g&eacute;neros sea una historia del pasado.</p>
+<p>Como dije al inicio de esta p&aacute;gina soy un ferviente creyente de poder de los datos. Lo que no se puede medir, no se puede mejorar. Y adem&aacute;s, hay tantos datos que son nuestros, ya sea porque los pagamos con nuestros impuestos o porque nosotros los generamos, que me resulta indispensable volverlos &uacute;tiles. De eso se trata este blog.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
-
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<p class="mb-5">No olvides dejar tus comentarios en los posts o mándame un mail, tuit o mensaje de LinkedIn.
+     Justo aquí abajo están los iconos que te llevan a mis perfiles en las plataformas que uso habitualmente.</p>
