Agregar pagina de colaboraciones

--- a/colaboraciones.html
+++ b/colaboraciones.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Sobre mí
-description: Conoce un poco más sobre @nerudista
+title: Colaboraciones
+description: Me gusta compartir y hay gente muy generosa qu e me deja escribir en sus espacios. Aquì puedes encontrar algunos de mis artìculos
 background: '/img/bg-about.jpg'
 ---
 
