Primera version de imagenes

--- a/colaboraciones.html
+++ b/colaboraciones.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: Colaboraciones
-description: Me gusta compartir y hay gente muy generosa qu e me deja escribir en sus espacios. Aquì puedes encontrar algunos de mis artìculos
-background: '/img/bg-about.jpg'
+description: Me gusta compartir y hay gente muy generosa que me deja aportar en sus espacios. Aquí puedes encontrar algunos de mis colaboraciones.
+background: '/img/bg-colaboraciones.jpg'
 ---
 
 <p><strong>En pocas palabras</strong></p>
